--- a/package.json
+++ b/package.json
@@ -8,20 +8,39 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
-    "next": "13.5.4"
+    "@auth/prisma-adapter": "^1.0.3",
+    "@prisma/client": "^5.4.1",
+    "@tanstack/react-query": "^4.35.7",
+    "@trpc/client": "^10.38.5",
+    "@trpc/next": "^10.38.5",
+    "@trpc/react-query": "^10.38.5",
+    "@trpc/server": "^10.38.5",
+    "cookie": "^0.5.0",
+    "next": "^13.5.4",
+    "npm-run-all": "^4.1.5",
+    "prisma": "^5.4.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-use": "^17.4.0",
+    "superjson": "^1.13.3",
+    "zod": "3.21.1"
   },
   "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "autoprefixer": "^10",
-    "postcss": "^8",
-    "tailwindcss": "^3",
-    "eslint": "^8",
-    "eslint-config-next": "13.5.4"
+    "@pandacss/dev": "^0.15.3",
+    "@types/cookie": "^0.5.2",
+    "@types/node": "^20.8.2",
+    "@types/react": "^18.2.24",
+    "@types/react-dom": "^18.2.8",
+    "@typescript-eslint/eslint-plugin": "^6.7.4",
+    "del-cli": "^5.1.0",
+    "eslint": "^8.50.0",
+    "eslint-config-next": "^13.5.4",
+    "open-cli": "^7.2.0",
+    "postcss": "^8.4.31",
+    "prettier": "^3.0.3",
+    "sort-package-json": "^2.6.0",
+    "typescript": "^5.2.2",
+    "zod-prisma-types": "^2.7.9"
   },
   "name": "next-todo-app",
   "description": "This is a [Next.js](https://nextjs.org/) project bootstrapped with [`create-next-app`](https://github.com/vercel/next.js/tree/canary/packages/create-next-app).",
