--- a/package.json
+++ b/package.json
@@ -1,11 +1,34 @@
 {
+  "name": "next-todo-app",
   "version": "0.1.0",
   "private": true,
+  "description": "This is a [Next.js](https://nextjs.org/) project bootstrapped with [`create-next-app`](https://github.com/vercel/next.js/tree/canary/packages/create-next-app).",
+  "keywords": [],
+  "license": "MIT",
+  "author": "",
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "build": "run-s clean codegen build:*",
+    "build:next": "next build",
+    "clean": "del .next",
+    "codegen": "run-p codegen:*",
+    "codegen:panda": "panda codegen",
+    "codegen:prisma": "prisma generate",
+    "deploy": "gcloud run deploy nextjs-app-router --region asia-northeast1 --allow-unauthenticated --max-instances 1 --source .",
+    "dev": "npm-run-all clean codegen -p dev:*",
+    "dev:next": "DATABASE_URL=file:${PWD}/prisma.db next dev",
+    "dev:open": "open-cli http://localhost:3000",
+    "format": "run-s format:*",
+    "format:next": "next lint --fix",
+    "format:prettier": "prettier --write .",
+    "format:prisma": "prisma format",
+    "format:sort-package-json": "sort-package-json",
+    "lint": "npm-run-all clean codegen --aggregate-output -p lint:* build:next",
+    "lint:next": "next lint",
+    "lint:prettier": "prettier --check .",
+    "prisma": "DATABASE_URL=file:${PWD}/prisma.db prisma",
+    "start": "DATABASE_URL=file:${TMPDIR}prisma.db run-s start:*",
+    "start:next": "next start",
+    "start:prisma": "prisma migrate deploy"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^1.0.3",
@@ -41,10 +64,5 @@
     "sort-package-json": "^2.6.0",
     "typescript": "^5.2.2",
     "zod-prisma-types": "^2.7.9"
-  },
-  "name": "next-todo-app",
-  "description": "This is a [Next.js](https://nextjs.org/) project bootstrapped with [`create-next-app`](https://github.com/vercel/next.js/tree/canary/packages/create-next-app).",
-  "keywords": [],
-  "license": "MIT",
-  "author": ""
+  }
 }
