--- a/package.json
+++ b/package.json
@@ -7,28 +7,28 @@
   "license": "MIT",
   "author": "",
   "scripts": {
-    "build": "run-s clean codegen build:*",
-    "build:next": "next build",
-    "clean": "del .next",
-    "codegen": "run-p codegen:*",
-    "codegen:panda": "panda codegen",
-    "codegen:prisma": "prisma generate",
-    "deploy": "gcloud run deploy nextjs-app-router --region asia-northeast1 --allow-unauthenticated --max-instances 1 --source .",
     "dev": "npm-run-all clean codegen -p dev:*",
     "dev:next": "DATABASE_URL=file:${PWD}/prisma.db next dev",
     "dev:open": "open-cli http://localhost:3000",
+    "build": "run-s clean codegen build:*",
+    "build:next": "next build",
+    "start": "DATABASE_URL=file:${TMPDIR}prisma.db run-s start:*",
+    "start:prisma": "prisma migrate deploy",
+    "start:next": "next start",
+    "deploy": "gcloud run deploy nextjs-app-router --region asia-northeast1 --allow-unauthenticated --max-instances 1 --source .",
+    "lint": "npm-run-all clean codegen --aggregate-output -p lint:* build:next",
+    "lint:prettier": "prettier --check .",
+    "lint:next": "next lint",
+    "clean": "del .next",
     "format": "run-s format:*",
+    "format:sort-package-json": "sort-package-json",
+    "format:prisma": "prisma format",
     "format:next": "next lint --fix",
     "format:prettier": "prettier --write .",
-    "format:prisma": "prisma format",
-    "format:sort-package-json": "sort-package-json",
-    "lint": "npm-run-all clean codegen --aggregate-output -p lint:* build:next",
-    "lint:next": "next lint",
-    "lint:prettier": "prettier --check .",
-    "prisma": "DATABASE_URL=file:${PWD}/prisma.db prisma",
-    "start": "DATABASE_URL=file:${TMPDIR}prisma.db run-s start:*",
-    "start:next": "next start",
-    "start:prisma": "prisma migrate deploy"
+    "codegen": "run-p codegen:*",
+    "codegen:panda": "panda codegen",
+    "codegen:prisma": "prisma generate",
+    "prisma": "DATABASE_URL=file:${PWD}/prisma.db prisma"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^1.0.3",
@@ -58,6 +58,7 @@
     "del-cli": "^5.1.0",
     "eslint": "^8.50.0",
     "eslint-config-next": "^13.5.4",
+    "npm-run-all": "^4.1.5",
     "open-cli": "^7.2.0",
     "postcss": "^8.4.31",
     "prettier": "^3.0.3",
